# Shopping-list

./: Dockerfile  LICENSE  MIGRATION_GUIDE.md  README.md
.github/workflows/: docker.yml
Backend/: app.js  package-lock.json  package.json  render-build.sh
Backend/controllers/: items.js
Backend/models/: item.js
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.css  App.jsx  index.css
Frontend/src/components/: Item.css  Item.jsx  SearchFilter.css  SearchFilter.jsx  TagManager.css  TagManager.jsx
Frontend/src/services/: items.js  tags.js
backend-rust/: .env.example  Cargo.toml  Dockerfile  README.md
backend-rust/migrations/: 001_init.sql
backend-rust/src/: db.rs  handlers.rs  main.rs  models.rs
